# cidrthings

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
contrib/: cidrthings.py  cidrthings.sh
src/: lib.rs  main.rs
tests/: cli.rs
